# pouch

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  setup.cfg  setup.py
pouch/: __init__.py  clim_diag.py  log.py  path.py  plot.py  proc_um_output.py  simple.mplstyle  triage.py  triage_run.py
