[metadata]
name = pouch
description = Python objects used across my projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Denis Sergeev
author_email = dennis.sergeev@gmail.com
url = https://github.com/dennissergeev/pouch
github_project = dennissergeev/pouch
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev0
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.8
license = LGPL-3.0
license-file = LICENSE
platform = any
keywords = atmospheric-science, planetary-science, climate-model
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)

[flake8]
exclude = extern,sphinx,*parsetab.py
max-line-length = 100
ignore = D413, I100, I201, T001, W503, W504
inline-quotes = "
# per-file-ignores =
#     pouch/*:D102,D105

[options]
zip_safe = False
package_dir =
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = pouch
